NXP-16514: remove MaxPermSize option unsupported in Java 8